Wrapping up Nomster, misc cosmetic fixes

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -43,6 +43,11 @@ body {
   font-size: 26px;
 }
 
+.nav-item {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .npaginator {
   font-size: 20px;
   margin-top: 8px;
@@ -112,4 +117,19 @@ hr {
 
 .carousel {
   box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.btn {
+  font-family: sans-serif;
+}
+
+.photoscomments {
+    border-style: solid;
+    border-color: blue;
+    background-color: #B5D9F8;
 }
